testimonial overflow fix

--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -8,6 +8,7 @@
   /* background: url("../../Images/pattern.png") no-repeat center/cover; */
   background: url("../../Images/PatternTestimonials.svg") no-repeat;
   background-size: 100% auto;
+  overflow-x: hidden;
 }
 
 #before,
